--- a/composer.json
+++ b/composer.json
@@ -15,13 +15,14 @@
     "laravel-plugin"
   ],
   "require": {
-    "php": "^8.2",
-    "laravel/framework": "^11.0",
+    "php": "^8.0",
+    "laravel/framework": "^9.0|^10.0",
     "jenssegers/agent": "^2.6"
   },
   "require-dev": {
-    "phpunit/phpunit": "^11.0.1",
-    "orchestra/testbench": "^9.0"
+    "phpunit/phpunit": "^8.5|^9.5",
+    "orchestra/testbench": "^7.0",
+    "orchestra/database": "^7.0"
   },
   "license": "MIT",
   "authors": [
